--- a/history
+++ b/history
@@ -17,6 +17,8 @@ composer require symfony/twig-bundle
 composer require symfony/translation
 #validator
 composer require symfony/validator
+#routing
+composer require sensio/framework-extra-bundle
 #creating entity User and Book
 php bin/console make:entity
 #migration
