--- a/history
+++ b/history
@@ -24,3 +24,5 @@ php bin/console make:entity
 #migration
 php bin/console make:migration
 php bin/console doctrine:migrations:migrate
+#fixtures, load some data
+php bin/console doctrine:fixtures:load
